--- a/header.html
+++ b/header.html
@@ -1,28 +1,44 @@
 
 <nav class="navbar navbar-expand-sm bg-light">
-
-  <!-- Links -->
-  <ul class="navbar-nav">
+  <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link" href="#">Cadastros</a>
+      <a class="nav-link active" href="home.php">Home</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Consultas</a>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Cadastrar</a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="cadastraAgendamento.php">Novo Agendamento</a>
+        <a class="dropdown-item" href="cadastraPaciente.php">Novo Paciente</a>
+        <a class="dropdown-item" href="cadastraProfissional.php">Novo Profissional</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="#">Separated link</a>
+      </div>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Agendamentos</a>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Listar</a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="listaAgendamento.php">Agendamentos</a>
+        <a class="dropdown-item" href="listaPaciente.php">Pacientes</a>
+        <a class="dropdown-item" href="listaProfissional.php">Profissionais</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="#">Separated link</a>
+      </div>
+    </li>
+    <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Consultas</a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">Agendadas</a>
+          <a class="dropdown-item" href="#">Pré-agendadas</a>
+          <a class="dropdown-item" href="#">Pacientes não Agendados</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Hoje</a>
+        </div>
     </li>
   </ul>
-  <div></div>
-  <nav>
   <ul class="navbar-nav">
-    <li> </li>
-    <li> </li>
-    <li> </li>
     <li class="nav-item">
       <a class="nav-link" href="sair.php"><strong>Sair</strong></a>
     </li>
   </ul>
-  </nav>
 </nav>
 <br>
