CRUD de agendamento e padronizando formulários

--- a/header.html
+++ b/header.html
@@ -1,8 +1,8 @@
 
 <nav class="navbar navbar-expand-sm bg-light">
-  <ul class="nav nav-tabs">
+  <ul class="nav nav-tabs" style="padding-left: 10%;">
     <li class="nav-item">
-      <a class="nav-link active" href="home.php">Home</a>
+      <a class="nav-link active" href="home.php">Início</a>
     </li>
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Cadastrar</a>
@@ -35,6 +35,7 @@
         </div>
     </li>
   </ul>
+  <ul class="navbar-nav col-md-2" style="padding-left: 18%;"></ul>
   <ul class="navbar-nav">
     <li class="nav-item">
       <a class="nav-link" href="sair.php"><strong>Sair</strong></a>
