--- a/header.html
+++ b/header.html
@@ -7,21 +7,19 @@
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Cadastrar</a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="cadastraAgendamento.php">Novo Agendamento</a>
         <a class="dropdown-item" href="cadastraPaciente.php">Novo Paciente</a>
         <a class="dropdown-item" href="cadastraProfissional.php">Novo Profissional</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Separated link</a>
+        <a class="dropdown-item" href="cadastraAgendamento.php">Novo Agendamento</a>
       </div>
     </li>
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Listar</a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="listaAgendamento.php">Agendamentos</a>
         <a class="dropdown-item" href="listaPaciente.php">Pacientes</a>
         <a class="dropdown-item" href="listaProfissional.php">Profissionais</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Separated link</a>
+        <a class="dropdown-item" href="listaAgendamento.php">Agendamentos</a>
       </div>
     </li>
     <li class="nav-item dropdown">
@@ -35,7 +33,7 @@
         </div>
     </li>
   </ul>
-  <ul class="navbar-nav col-md-2" style="padding-left: 18%;"></ul>
+  <ul class="navbar-nav" style="padding-left: 1%;"></ul>
   <ul class="navbar-nav">
     <li class="nav-item">
       <a class="nav-link" href="sair.php"><strong>Sair</strong></a>
